--- a/package.json
+++ b/package.json
@@ -242,15 +242,12 @@
     "filesize": "^10.0.6",
     "lazy-brush": "^1.0.1",
     "lodash.debounce": "^4.0.8",
+    "ollama": "^0.5.15",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "rimraf": "^4.3.1",
     "save-svg-as-png": "^1.4.17",
-    "shell-path": "^3.0.0",
-    "@langchain/ollama": "^0.2.0",
-    "@langchain/core": "^0.3.40",
-    "@langchain/langgraph": "^0.2.72",
-    "langchain": "^0.1.7"
+    "shell-path": "^3.0.0"
   },
   "optionalDependencies": {
     "@symphony/symphony-c9-shell": "3.38.0-94.195",
