Speech recognition first steps - auto stop to be improved

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compile": "run-s lint compile:*",
     "compile:project": "gulp build",
     "dev": "gulp build && npm run browserify && cross-env ELECTRON_DEV=true electron .",
+    "devai": "concurrently -k -n VOSK,ELECTRON -c yellow,cyan \"python3 ./python/start.py\" \"npm run dev -- --url=$npm_config_url\"",
     "demo": "run-os",
     "demo:win32": "gulp build && npm run browserify && cross-env ELECTRON_DEV=true electron . --url=file:///src/demo/index.html",
     "demo:darwin": "gulp build && npm run browserify && cross-env ELECTRON_DEV=true electron . --url=file://$(pwd)/src/demo/index.html",
@@ -191,6 +192,7 @@
     "browserify": "17.0.0",
     "builder-util-runtime": "^9.0.3",
     "cheerio": "v1.0.0-rc.12",
+    "concurrently": "^9.1.2",
     "cross-env": "7.0.3",
     "del": "3.0.0",
     "electron": "35.2.1",
