Add workspace creation

--- a/package.json
+++ b/package.json
@@ -253,7 +253,11 @@
     "react-dom": "16.14.0",
     "rimraf": "^4.3.1",
     "save-svg-as-png": "^1.4.17",
-    "shell-path": "^3.0.0"
+    "shell-path": "^3.0.0",
+    "@langchain/ollama": "^0.2.0",
+    "@langchain/core": "^0.3.40",
+    "@langchain/langgraph": "^0.2.72",
+    "langchain": "^0.1.7"
   },
   "optionalDependencies": {
     "@symphony/symphony-c9-shell": "3.38.0-94.195",
@@ -275,5 +279,6 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged && npm run lint"
     }
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
